--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
       <div class="card mb-3 top">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="\images\image2.jpg" class="card-img" width="100%" height="250">
+            <img src="\images\image2.jpeg" class="card-img" width="100%" height="250">
           </div>
           <div class="col-md-8">
             <div class="card-body">
@@ -75,14 +75,14 @@
             </div>
           </div>
           <div class="col-md-4">
-            <img src="\images\image6.jpg" class="card-img" width="100%" height="250">
+            <img src="\images\image6.jpeg" class="card-img" width="100%" height="250">
           </div>
         </div>
       </div>
       <div class="card mb-3 bottom">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <img src="\images\image5.jpg" class="card-img" width="100%" height="250">
+            <img src="\images\image5.jpeg" class="card-img" width="100%" height="250">
           </div>
           <div class="col-md-8">
             <div class="card-body">
